<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">basemodule</string>
    <string name="country_currency_symbol">{HBF}</string>
    <!--<string name="dinner_money_symbol">￥</string>-->
    <!--<string name="dinner_balace_price">￥%s</string>-->
    <string name="total_amount">总额</string>
    <string name="cancel">取消</string>
    <string name="handover_alter">修改</string>
    <string name="handover_cash">现金</string>
    <string name="dinner_dish_type_all">全部</string>
    <string name="handset_get_bracelet_info">正在获取手环信息，请稍等……</string>
    <string name="handset_input_pwd">请等待顾客输入密码……</string>
    <string name="handset_connect_timeout">设备连接超时</string>
    <string name="handset_connect_fail">设备连接失败</string>
    <string name="handset_bracelet_timeout">手环信息获取超时</string>
    <string name="handset_bracelet_fail">手环信息获取失败</string>
    <string name="handset_connect">正在连接设备，请稍等……</string>
    <string name="handset_bracelet">正在获取手环信息，请稍等……</string>
    <string name="handset_pwd">请等待顾客输入密码……</string>
    <string name="dinner_form_center">报表中心</string>
    <string name="report_form_item0">商品销售排行</string>
    <string name="erase_auto">自定义</string>
    <string name="dinner_goods_sell_rank_print_tip">请选择或者输入打印商品数量</string>
    <string name="print_filter">打印条件</string>
    <string name="ok_button">确定</string>
    <string name="handover_already_finish">已完成该班次的交接！</string>
    <string name="no_handover_permission">当前账号无交接权限</string>
    <string name="checkHandover">确认进行交接吗？</string>
    <string name="continue_handover">继续交接</string>
    <string name="common_submit">确定</string>
    <string name="common_cancel">取消</string>
    <string name="checkHandoverNoDaTa">系统没有产生新的数据，\n确认进行交接吗？</string>
    <string name="shop_management">门店管理</string>
    <string name="hand_over">交接</string>
    <string name="dinner_closing">关账</string>
    <string name="member_logout">退出登录</string>
    <string name="closing_time_range">&#160;&#160;至&#160;&#160; </string>
    <string name="closing_data_null_later">关账详情为空！ </string>
    <string name="closing_handover_label">本次关账将包含以下交接记录</string>
    <string name="closing_handover_time_hint">为保障门店记录清晰，交接及关账作业请在7天内完成。</string>
    <string name="closing_handover_hint">去交接</string>
    <string name="closing_success">关账成功</string>
    <string name="closing_unhandover">尚未交接</string>
    <string name="closing_unclose_hint">无交接记录，不能进行关账</string>
    <string name="closing_unhandover_current_hint">关账前请先完成交接</string>
    <string name="closing_unhandover_else_hint">请至未完成交接的设备上进行交接</string>
    <string name="closing_last_closeTime">上次关账时间：%1$s</string>
    <string name="closingAction">关账作业</string>
    <string name="closingHistory">历史关账</string>
    <string name="closingPrint">打    印</string>
    <string name="closingDate">归账日：</string>
    <string name="closingDateRange">起止时间：</string>
    <string name="closingRevenues">订单销售实收</string>
    <string name="closingTotalAmount">关账总金额</string>
    <string name="closingTradeAmount">订单销售实收</string>
    <string name="closingServiceChargeAmount">服务费（第三方平台）</string>
    <string name="closingTradeTotalAmount">订单销售金额总数</string>
    <string name="closingPrivilegeAmount">优惠金额</string>
    <string name="closingSaveInAmount">储值收入</string>
    <string name="closingOutAmount">支出</string>
    <string name="closingHangLagAmount">当日挂账且当日销账金额</string>
    <string name="closingOtherInAmount">其他收入</string>
    <string name="closingSaveOutAmount">储值消费</string>
    <string name="closingChargeOffs">销账收入</string>
    <string name="closingExemptAmount">抹零</string>
    <string name="closingRedundant">溢收</string>
    <string name="closingBizAmount">订单金额净值</string>
    <string name="closingBizMemberAmount">会员储值净值</string>
    <string name="closingBizMemberPay">储值收入</string>
    <string name="closingPaymentMode">支付方式(订单)</string>
    <string name="handover_up_page">上一页</string>
    <string name="handover_down_page">下一页</string>
    <string name="input_payments">收支录入</string>
    <string name="payments_history">历史收支</string>
    <string name="income_str">收入</string>
    <string name="expenses_str">支出</string>
    <string name="input_price_tips">请输入金额!</string>
    <string name="pay_baidubao_st">百度钱包</string>
    <string name="pay_wechat_st">微信</string>
    <string name="pay_alipay_st">支付宝</string>
    <string name="history_payments">收支历史记录</string>
    <string name="no_closing_permission">当前账号无关账权限</string>
    <string name="ib_do_closing">执行关账</string>
    <string name="tv_records_date">最近3天</string>
    <string name="closing_history_label">&#160;&#160;关账历史记录</string>
    <string name="closing_finishedTime">操作完成时间</string>
    <string name="closing_worker_label">关账人</string>
    <string name="closing_man_label_pre">(关账人：%1$s)</string>
    <string name="empty">空</string>
    <string name="closingOrderSale">订单销售实收</string>
    <string name="closingLagtitle">挂账</string>
    <string name="closingPrivilege">优惠明细</string>
    <string name="closingGoodsDiscount">手动商品折扣</string>
    <string name="closingOrderDiscount">手动整单折扣</string>
    <string name="closingAutoDiscount">会员商品折扣</string>
    <string name="closingIntegral">积分抵现</string>
    <string name="closingPromoGift">礼品券</string>
    <string name="closingPromoDebt">满减券</string>
    <string name="closingPromoVoucher">现金券</string>
    <string name="closingPromoDiscount">折扣券</string>
    <string name="closing_trade_unit">单</string>
    <string name="closingThirdparty">第三方平台优惠</string>
    <string name="closingWeChatPrivilege">微信卡劵优惠</string>
    <string name="closingEntertainPrivilege">宴请</string>
    <string name="closingDishMarketPrivilege">营销活动优惠</string>
    <string name="closingreturnguestPrivilege">熟客优惠</string>
    <string name="print_delivery_time">送达时间</string>
    <string name="order_delivery_time_now">立即</string>
    <string name="print_delivery">送达</string>
    <string name="print_config_error">打印配置初始化错误,导致出票异常</string>
    <string name="instant_take">立即上门</string>
    <string name="order_center_receiver_secrecy_phone">%1$s转%2$s</string>
    <string name="gentleman">先生</string>
    <string name="print_arrived">到店</string>
    <string name="print_kou_bei_arrived">预计到店时间</string>
    <string name="lady">女士</string>
    <string name="extracharges">附加费</string>
    <string name="reason_type_self_define_reason">请输入自定义理由...</string>
    <string name="pre_pay_amount">预付金</string>
    <string name="bakery_app_name">烘焙</string>
    <string name="sales_promotion_title">促销活动</string>
    <string name="sales_promotion_view_details">查看详情</string>
    <string name="sales_promotion_end_date">有效期至：%1$s</string>
    <string name="sales_promotion_market_subject_all_goods_usable">全部商品可用</string>
    <string name="sales_promotion_market_subject_part_goods_usable">部分商品可用</string>
    <string name="sales_promotion_market_subject_part_goods_unusable">部分商品不可用</string>
    <string name="sales_promotion_rule_restrict_match_quantity_once_multiple_goods">满%1$s件</string>
    <string name="sales_promotion_rule_restrict_raise_price_goods">满%1$s件加%2$s元</string>
    <string name="sales_promotion_rule_restrict_raise_price_goods1">满%1$s元加%2$s元</string>
    <string name="sales_promotion_rule_restrict_give_goods">赠%1$s件</string>
    <string name="sales_promotion_rule_restrict_match_quantity_once_next_goods">满%1$s件下一份优惠</string>
    <string name="sales_promotion_rule_restrict_match_amount_once_specified_goods">满%1$s%2$s</string>
    <string name="sales_promotion_rule_restrict_match_amount_once_next_goods">满%1$s%2$s下一份优惠</string>
    <string name="sales_promotion_policy_detail_specified_goods_discount">%1$s折</string>
    <string name="sales_promotion_policy_detail_multiple_goods_discount">%1$s折</string>
    <string name="sales_promotion_policy_detail_single_goods_discount">%1$s折</string>
    <string name="sales_promotion_policy_detail_specified_goods_rebate">减%1$s%2$s</string>
    <string name="sales_promotion_policy_detail_multiple_goods_rebate">减%1$s%2$s</string>
    <string name="sales_promotion_policy_detail_single_goods_rebate">减%1$s%2$s</string>
    <string name="sales_promotion_policy_detail_multiple_goods_rebate_lowest">减低价商品</string>
    <string name="sales_promotion_policy_detail_multiple_goods_fixed_price">一口价%1$s%2$s</string>
    <string name="sales_promotion_policy_detail_single_goods_fixed_price">一口价%1$s%2$s</string>
    <string name="sales_promotion_policy_detail_next_goods_fixed_price">特价%1$s%2$s</string>
    <string name="sales_promotion_policy_detail_next_goods_discount">%1$s折</string>
    <string name="sales_promotion_policy_detail_next_goods_rebate">减%1$s%2$s</string>
    <string name="sales_promotion_detail">活动详情</string>
    <string name="sales_promotion_detail_name">活动名称：</string>
    <string name="sales_promotion_detail_type">活动类型：</string>
    <string name="sales_promotion_detail_date">活动周期：</string>
    <string name="sales_promotion_detail_week">活动日期：</string>
    <string name="sales_promotion_detail_limit_period">活动时段：</string>
    <string name="sales_promotion_detail_limit_period_non">不限时段</string>
    <string name="sales_promotion_detail_filter">活动条件：</string>
    <string name="sales_promotion_detail_other_filter">其他条件</string>
    <string name="sales_promotion_detail_apply_crowd">参与人群：</string>
    <string name="sales_promotion_detail_apply_crowd_all">不限</string>
    <string name="sales_promotion_detail_apply_crowd_member">会员</string>
    <string name="sales_promotion_detail_apply_crowd_nonmember">非会员</string>
    <string name="sales_promotion_detail_terminal_type">终端类型：</string>
    <string name="sales_promotion_detail_terminal_type_pos">POS</string>
    <string name="sales_promotion_detail_delivery_type">单据类型：</string>
    <string name="sales_promotion_detail_delivery_type_all">内用、外带、自取、外送</string>
    <string name="sales_promotion_detail_activity_dish">参与菜品：</string>
    <string name="sales_promotion_detail_activity_dish_all">全部商品可用</string>
    <string name="sales_promotion_detail_activity_dish_all_unusable">全部商品都不可用</string>
    <string name="please_sale_promotion_choice_free_goods">请选择赠送商品</string>
    <string name="sale_promotion_choice_free_goods_hint">商品</string>
</resources>
