<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/dinnerdish_bg">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/snack_title_bg"
            android:orientation="horizontal"
            android:paddingRight="1dp">

            <!--<com.zhongmei.bty.basemodule.queue.TurnToOtherModuleView
                android:id="@+id/ll_back"
                android:layout_width="60dp"
                android:layout_height="match_parent" />-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    layout="@layout/common_title_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left" />

                <TextView
                    android:id="@+id/tv_title_name"
                    style="@style/TitleTextStyle"
                    android:layout_gravity="center"
                    android:text="@string/shop_management"
                    android:textSize="@dimen/store_manager_toolbar_text_size" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:background="#108fdc" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dinner_left_bg_shadow_shape"
            android:orientation="vertical">
            <!--收支-->
            <TextView
                android:id="@+id/tv_payments"
                style="@style/LeftItemStyle"
                android:drawableLeft="@drawable/ic_payments"
                android:text="@string/payments_str" />
            <!--交接-->
            <TextView
                android:id="@+id/tv_handover"
                style="@style/LeftItemStyle"
                android:drawableLeft="@drawable/ic_handover"
                android:text="@string/hand_over" />
            <!--关账-->
            <TextView
                android:id="@+id/tv_closing"
                style="@style/LeftItemStyle"
                android:drawableLeft="@drawable/ic_closing"
                android:text="@string/dinner_closing" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>