<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_recharge"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_records_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_records_date"
            android:textColor="@color/text_blue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closing_history_label"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/closing_history_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/closing_restore_selector"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ib_select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/icon_date_select" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_closing_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/close_bill_lin_selector"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingRight="48dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:text="@string/closing_finishedTime"
                        android:textColor="@color/text_gray"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:text="@string/closing_worker_label"
                        android:textColor="@color/text_gray"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View
                    android:id="@+id/line_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_gray" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dinner_order_center_no_data"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>