<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_recharge"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/closing_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="46dp"
            android:layout_marginRight="46dp">

            <LinearLayout
                android:id="@+id/ll_closing_handover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/close_bill_lin_selector"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/dinner_order_center_no_data"
            android:visibility="gone" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_closing_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            android:text="" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/tv_closing_time"
            android:text="@string/closing_handover_label"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_closing_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label"
            android:layout_below="@+id/tv_closing_time"
            android:textColor="@color/text_black"
            android:textSize="16sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_closing_time_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/closing_handover_time_hint"
        android:layout_marginLeft="46dp"
        android:textColor="@color/text_red"
        android:layout_marginBottom="15dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/ib_do_closing"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:background="@drawable/btn_green_selector"
        android:text="@string/ib_do_closing"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_22" />

</LinearLayout>