<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="373.33dp"
        android:layout_height="480dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/order_center_operate_dialog_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="66.67dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/please_sale_promotion_choice_free_goods"
                android:textColor="#FF7901"
                android:textSize="21.33sp" />

            <ImageView
                android:id="@+id/btn_goods_close"
                android:layout_width="33.93dp"
                android:layout_height="33.93dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="14.07dp"
                android:background="@drawable/dinner_close"
                android:clickable="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="325.33dp"
            android:layout_height="26.67dp"
            android:layout_gravity="center"
            android:background="#fff6f6f6"
            android:gravity="center_vertical"
            android:paddingEnd="6.67dp"
            android:paddingStart="6.67dp"
            android:text="@string/sale_promotion_choice_free_goods_hint"
            android:textColor="#999999"
            android:textSize="13.33sp" />

        <FrameLayout
            android:layout_width="325.33dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_choose_goods_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animationCache="false"
                android:background="@drawable/shape_basemodule_choose_purchase_goods"
                android:padding="2dp"
                android:persistentDrawingCache="scrolling" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53.33dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rt_btn_choose_purchase_goods_cancel_selector"
                android:text="@string/common_cancel"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rt_btn_choose_purchase_goods_confirm_selector"
                android:text="@string/handover_ok"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>